--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body {
     padding: 0;
     background-image: 
     linear-gradient(to left,  rgb(255, 255, 255), rgb(255, 255, 255) ,rgba(255, 255, 255, 0.527),  rgba(105, 105, 105, 0)), /* Gradiente de escurecimento */
-    url(midia/posto-fundo.jpg);
+    url(posto-fundo.jpg);
     background-size: 100vw 100vh;
     background-repeat: no-repeat;
 }
@@ -46,7 +46,7 @@ main{
 
 .response {
     color: black;
-    background-image: url(midia/posto-de-gasolina.png);
+    background-image: url(posto-de-gasolina.png);
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
